updated openapi.json wrt updated router
